Add sketch of Ligeti's ideas in Remifications

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -137,6 +137,31 @@ On several previous occasions, when I have been asked to explain the composition
 \subsection{Ligeti: Remifications}
 \label{sub:composition_ligeti}
 
+Ligeti ideals and characteristics as found in Remifications.
+
+\subsubsection{Micropolyphony, flexible rhythm and misleading notation}
+
+This ideas are perhaps the most dominants in this composition.
+Examples can be found in the 0:00 - 1:55, 4:20 - 4:35, 5:28 - 6:25.
+
+\subsubsection{Machine like music / Meccanico-type}
+
+It appears to me that these idea could be counted together with the previous ones.
+On the other hand, some parts in Remifications are dominated by more ``machine-like'' characteristics than others.
+For example: 5:28 - 6:25, 7:00 - 8:00.
+
+\subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
+
+Gesticulated phrases appears in Remifications only for short periods, they are not characterize the composition as a hole.
+Nevertheless, we can note two ``overly exaggerated'' phrases, where the primer is a bit more distinct in that manner: 3:36 - 3:45, 6:28 - 6:40.
+One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most present some decent amount of cynicism.
+
+\subsubsection{‘Mistiness’ to ‘clearing-up’ process}
+
+In my opinion this idea is the lessen distinct in this composition.
+This is probably because of the firm voice that accompanies any of the mictrotonal parts, while the ``mistiness'' microtonal is steady and is not ``clearing-up'' into an perfect interval.
+The most relevant parts I managed to find for this idea are: 1:40 - 2:08, 2:19 - 2:38.
+
 \subsection{Stockhausen: Gesang der J{\"u}nglinge}
 \label{sub:composition_stockhausen}
 
