--- a/manuscript.tex
+++ b/manuscript.tex
@@ -121,12 +121,48 @@ My idea was that instead of tension-resolution, dissonance-consonance, dominant-
 
 On several previous occasions, when I have been asked to explain the composition of electronic music, I have described four characteristics that seem important to me for electronic composition as distinguished from the composition of instrumental music:
 
-\begin{enumerate}
-  \item The correlation of the coloristic, harmonic-melodic, and metric-rhythmic aspects of composition.
-  \item The composition and de-composition of timbres.
-  \item The characteristic differentiation among degrees of intensity.
-  \item The ordered relationships between sound and noise.
-\end{enumerate}
+\subsubsection{The correlation of the coloristic, harmonic-melodic, and metric-rhythmic aspects of composition}
+\label{subs:stockhausen:time}
+
+Most of the current paper by Stockhausen deals with this element.
+In my opinion, Stockhausen attitude toward the correlation between different compositional aspects could be put by the two following ideas:
+
+\begin{itemize}
+    \item He classify different sonic elements as different perceptions of the time domain.
+    For example, periodic elements of short time intervals are intercepted as pitch, and therefore as the basis for melody and harmony;
+    Periodic elements of medium time interval are intercepted as tempo and rhythm;
+    Those of larger time intervals are seen as musical structure.
+    Furthermore, Stockhausen describe those ``time spans'' as spread across 7 octaves:
+    Pitch is spread across the 7 octaves of the piano;
+    Tempo and rhythm are spread from 1/16 of a second up to 8 seconds;
+    Lastly, time spans of 8 to 1024 seconds are intercepted as structural building blocks.
+
+    \item Based on the attitude described above Stockhausen approach electronic music as a tool to apply total serializm (TODO: {total serializm reference}).
+    Furthermore, he argues that serializm must exist in electronic composition.
+    The thinking path the led Stockhausen to this argument is clear, but it is still hard for me to agree with him.
+    Later, I will try to confront this idea with those reflected in his and Ligeti's music.
+\end{itemize}
+
+Overall, I can not find a common ground between this compository element to those of Ligeti that were mentioned before.
+Their attitudes regarding unified perception of time are, most probably, contradicting.
+
+\subsubsection{The composition and de-composition of timbres}
+\label{subs:stockhausen:timber}
+
+Ligeti reference this ideas as following:
+Modification of timbre and dynamics are obviously very significant but the patterns emerging from them are even more important...
+I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (Ligeti in conversation, p. 39).
+
+\subsubsection{The characteristic differentiation among degrees of intensity}
+\label{subs:stockhausen:intensity}
+
+I'm not sure I fully understand the meaning of this element, not from the current paper, at least.
+I will leave this element ``out of scope'' for now.
+
+\subsubsection{The ordered relationships between sound and noise}
+\label{subs:stockhausen:noise}
+
+main area to compare Ligeti and Stockhausen ideas TODO.
 
 \subsection{Koenig}
 \label{sub:eshtetic_koenig}
