First part of history review is ready. Next are Darmstadt-Cologne in general and than the later paths of the composers

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -58,3 +58,31 @@
   url={http://drum.lib.umd.edu/bitstream/1903/3457/1/umi-umd-3281.pdf},
   urldate={2015-07-17}
 }
+@online{stockhausen_grove,
+  author={Richard Toop},
+  title={Stockhausen, Karlheinz},
+  year={n.d.},
+  note={Grove Music Online. Oxford Music Online. Oxford University Press},
+  url={http://www.oxfordmusiconline.com/subscriber/article/grove/music/26808},
+  urldate={2015-07-25}
+}
+@online{ligeti_grove,
+  author={Paul Griffiths},
+  title={Ligeti, Gy{\"o}rgy},
+  year={n.d.},
+  journal={Grove Music Online},
+  publisher={Oxford Music Online. Oxford University Press},
+  note={Grove Music Online. Oxford Music Online. Oxford University Press},
+  url={http://www.oxfordmusiconline.com/subscriber/article/grove/music/16642},
+  urldate={2015-07-25}
+}
+@online{koenig_grove,
+  author={Wolf Frobenius},
+  title={Koenig, Gottfried Michael},
+  year={n.d.},
+  journal={Grove Music Online},
+  publisher={Oxford Music Online. Oxford University Press},
+  note={Grove Music Online. Oxford Music Online. Oxford University Press},
+  url={http://www.oxfordmusiconline.com/subscriber/article/grove/music/15252},
+  urldate={2015-07-25}
+}
