--- a/manuscript.tex
+++ b/manuscript.tex
@@ -30,26 +30,22 @@ The electronic works of Gy{\"o}rgy Ligeti and their influence on his later style
 \section{Historical Review}
 \label{sec:historical_Review}
 
-From www.koenigproject.nl (add reference if using):
+Gy{\"o}rgy Ligeti, one of the most innovative musicians of modern 20\textsuperscript{th}-century, was born in Hungary to a Jewish family in 1923.
+After suffering from two tyrannies in his youth, Nazi and Stalinist, he left Hungary in 1956 facing western Europe (\cite{ligeti_grove}).
+There, he was exposed to electronic music through the Darmstadt-Cologne avant guard ideology, which influenced his writing ever since (\cite[p. TODO]{levy2006}).
 
-Gottfried Michael Koenig, born in 1926 in Magdeburg, Germany, studied church music in Braunschweig, composition, piano, analysis and acoustics in Detmold, music representation techniques in Cologne and computer technique in Bonn.
-He attended the Darmstadt music summer schools for several years, later as a lecturer.
-From 1954 to 1964 Koenig worked in the electronic music studio of West German Radio at Cologne, assisting other composers (including Stockhausen, Kagel, Evangelisti, Ligeti, Brün), and producing his own electronic compositions (Klangfiguren, Essay, Terminus 1).
-During this period he also wrote orchestral and chamber music (for piano, string quartet, woodwind quintet).
-From 1958 he was an assistant in the radio drama department at the Cologne academy of music, where he taught electronic music, composition and analysis from 1962.
-In 1964 Koenig moved to the Netherlands.
-Until 1986 he was director and later chairman of the Institute of Sonology at the University of Utrecht.
-During this period the Institute acquired a worldwide reputation, particularly for its annual Sonology course.
-Koenig also lectured extensively in the Netherlands and other countries and developed his computer programs "Project 1", "Project 2" and "SSP", designed to formalise the composition of musical structure-variants.
-He continued to produce electronic works (Terminus 2, the Funktionen series).
-These were followed by the application of his computer programs, resulting in chamber music (Übung for piano, the Segmente series, 3 ASKO Pieces, String Quartet 1987, String Trio) and works for orchestra (Beitrag, Concerti e Corali).
-Since 1986, when the Institute moved from Utrecht University to the Royal Conservatory at The Hague, Koenig has continued to compose, produce computer graphics and develop musical expert systems.
-The first three volumes of his theoretical writings were published between 1991 and 1993 under the title "Ästhetische Praxis" by Pfau Verlag; an Italian selection appeared under the title "Genesi e forma" (Semar, Rome 1995).
-A fourth volume followed in 1999, a fifth in 2002; the sixth (2007) contains a complete thematic index.
-In 1961 Koenig received an incentive award from the Federal State of North Rhine-Westphalia, in 1987 the Matthijs Vermeulen Prize from the City of Amsterdam, in 1991 the Christoph and Stephan Kaske Prize.
-In 2002 the Philosophical Faculty of the University of Saarbrücken, Germany, awarded Koenig an honorary doctorate.
-In the winter semester of 2002/2003 he was Visiting Professor for Computer Music at the Technical University, Berlin.
-In 2010 Koenig received the Giga-Hertz Prize of ZKM, Karlsruhe.
+Karlheinz Stockhausen, probably the most prominent German composer of the 2\textsuperscript{nd} half of the 20\textsuperscript{th}-century, was born in Colone in 1928.
+He enrolled at the Cologne Musikhochschule in 1947 and graduated in 1951.
+After his graduation Stockhausen went to the Darmstadt Ferienkurse f{\"u}r Neue Music and later moved to Paris, where he met Messiaen, Boulez and Pierre Schaeffer and introduced to the Parisian avant garde and the musique-concr{\`e}te studios.
+
+By 1953 Stockhausen was already established as a leading composer in the serialist avant guard.
+Over the next few years he became the leading figure in Darmstadt-Colone avant guard scene and from 1956 started to teach regularly at the Darmstadt summer courses (\cite{stockhausen_grove}).
+
+Gottfried Michael Koenig, was born in 1926 in Magdeburg, Germany.
+He studied church music in Braunschweig, composition, piano, analysis and acoustics in Detmold, music representation techniques in Cologne and computer technique in Bonn\footnote{Koenig homepage: www.koenigproject.nl/indexe.html}.
+During the 1951 Darmstadt summer courses he attended lectures by Meyer-Eppler that awakened his interest in electronic sound production.
+In 1953 he moved to Cologne where he studied music technology at the Cologne Hochschule f{\"u}r Music and attended courses on electronic data processing at the University of Cologne.
+At the same time he started to work at the Studio for Electronic Music of the West German Radio (WDR), first as assistant for other composers and later as as a permanent employee and composer (\cite{koenig_grove}).
 
 \section{Research Targets}  % Not sure that this is necessary
 \label{sec:research_targets}
