Some bibtex improvements and TODOs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,11 +13,12 @@
   year={1962},
   publisher={JSTOR}
 }
-@article{koenig,
+@online{koenig,
   title={The Construction of Sound},
   author={Koenig, Gottfried Michael},
   year={1963},
-  url={http://www.koenigproject.nl/Construction_of_Sound.pdf}
+  url={http://www.koenigproject.nl/Construction_of_Sound.pdf},
+  urldate={2015-07-17}
 }
 @misc{rami_music,
   author={Ligeti, Gy{\"o}rgy},
