--- a/manuscript.tex
+++ b/manuscript.tex
@@ -56,6 +56,10 @@ At the same time he started to work at the Studio for Electronic Music of the We
 \subsection{Ligeti}
 \label{sub:eshtetic_ligeti}
 
+TODO Add Frigyesi comments from her paper in the relevant places.
+
+TODO Some introduction: Ligeti citations are self explanatory...
+
 \subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
 \label{subs:ligeti:hectic}
 
@@ -187,6 +191,7 @@ For example: 5:28 - 6:25, 7:00 - 8:00.
 Gesticulated phrases appears in Remifications only for short periods, they are not characterize the composition as a hole.
 Nevertheless, we can note two ``overly exaggerated'' phrases, where the primer is a bit more distinct in that manner: 3:36 - 3:45, 6:28 - 6:40.
 One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most present some decent amount of cynicism.
+TODO cite frigyesi to support this statement.
 
 \subsubsection{‘Mistiness’ to ‘clearing-up’ process}
 
