Darmstadt-Cologne background in history review

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -87,3 +87,19 @@
   url={http://www.oxfordmusiconline.com/subscriber/article/grove/music/15252},
   urldate={2015-07-25}
 }
+@online{darmstadt_oxford,
+  author={Richard Taruskin},
+  title={Chapter 1 Starting from Scratch},
+  journal={The Oxford History of Western Music},
+  publisher={Oxford University Press. New York, USA},
+  note={The Oxford History of Western Music. Oxford University Press. New York, USA},
+  year={n.d.},
+  urldate={2015-09-12},
+  url={http://www.oxfordwesternmusic.com/view/Volume5/actrade-9780195384857-div1-001008.xml}
+}
+@online{nwdr,
+  title={The Birth of Electronic Music Recording Studios},
+  site={Martian Arts},
+  urldate={2015-09-12},
+  url={http://www.martianarts.net/web/culture/technology/105-the-birth-of-electronic-music-recording-studios}
+}
