--- a/manuscript.tex
+++ b/manuscript.tex
@@ -47,6 +47,18 @@ During the 1951 Darmstadt summer courses he attended lectures by Meyer-Eppler th
 In 1953 he moved to Cologne where he studied music technology at the Cologne Hochschule f{\"u}r Music and attended courses on electronic data processing at the University of Cologne.
 At the same time he started to work at the Studio for Electronic Music of the West German Radio (WDR), first as assistant for other composers and later as as a permanent employee and composer (\cite{koenig_grove}).
 
+Darmstadt of post Wold War II became an important center for modern music.
+The city is located in the state of Hessen in central Germany, in the American zone of occupation of these days.
+The summer courses were financial supported by the US military government with two goals:
+first, to propagate American values in effort to reeducate the German population in preparation for the establishment of democratic institutions;
+and second, to provide a meeting place where musicians from the former fascist or fascist-occupied areas might further their musical reeducation through exposure to styles and techniques that had been prohibited during the fascist years (\cite{darmstadt_oxford}).
+Since the first Darmstadt summer course, in 1948, the focus was on current musical concepts;
+at the time it was, especially electronic and serail music\footnote{Internationales Musicinstitut Darmstadt: www.internationales-musikinstitut.de/en/summer-course/history/210-history.html}.
+
+In addition to Darmstadt summer courses, the electronic music studios of Colone were another prominent center for the Darmstadt-Cologne avant guard scene.
+The studios were founded in 1951, focused on the creation of pure electronic or ``electroacoustic'' music.
+It is believed that the term ``electroacoustic'' was coined by Meyer-Eppler, one of the founders of the studios, to distinguish themeselves from musique-concr{\`e}te that characterize the French electronic studios (\cite{nwdr}).
+
 \section{Research Targets}  % Not sure that this is necessary
 \label{sec:research_targets}
 
