English improvements in history review

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -34,30 +34,31 @@ Gy{\"o}rgy Ligeti, one of the most innovative musicians of modern 20\textsupersc
 After suffering from two tyrannies in his youth, Nazi and Stalinist, he left Hungary in 1956 facing western Europe (\cite{ligeti_grove}).
 There, he was exposed to electronic music through the Darmstadt-Cologne avant guard ideology, which influenced his writing ever since (\cite[p. TODO]{levy2006}).
 
-Karlheinz Stockhausen, probably the most prominent German composer of the 2\textsuperscript{nd} half of the 20\textsuperscript{th}-century, was born in Colone in 1928.
+Karlheinz Stockhausen, probably the most prominent German composer of the 2\textsuperscript{nd} half of the 20\textsuperscript{th}-century, was born in Cologne in 1928.
 He enrolled at the Cologne Musikhochschule in 1947 and graduated in 1951.
-After his graduation Stockhausen went to the Darmstadt Ferienkurse f{\"u}r Neue Music and later moved to Paris, where he met Messiaen, Boulez and Pierre Schaeffer and introduced to the Parisian avant garde and the musique-concr{\`e}te studios.
+After his graduation Stockhausen went to the Darmstadt Internationale Ferienkurse f{\"u}r Neue Musik (the International Summer Courses for New Music) and later moved to Paris, where he met Messiaen, Boulez and Pierre Schaeffer and introduced to the Parisian avant guard and the musique-concr{\`e}te studios.
 
-By 1953 Stockhausen was already established as a leading composer in the serialist avant guard.
-Over the next few years he became the leading figure in Darmstadt-Colone avant guard scene and from 1956 started to teach regularly at the Darmstadt summer courses (\cite{stockhausen_grove}).
+By 1953 Stockhausen was already established as a leading serialist avant guard composer.
+Over the next few years he became the leading figure in Darmstadt-Cologne avant guard scene and from 1956 started to teach regularly at the Darmstadt summer courses (\cite{stockhausen_grove}).
 
 Gottfried Michael Koenig, was born in 1926 in Magdeburg, Germany.
 He studied church music in Braunschweig, composition, piano, analysis and acoustics in Detmold, music representation techniques in Cologne and computer technique in Bonn\footnote{Koenig homepage: www.koenigproject.nl/indexe.html}.
 During the 1951 Darmstadt summer courses he attended lectures by Meyer-Eppler that awakened his interest in electronic sound production.
 In 1953 he moved to Cologne where he studied music technology at the Cologne Hochschule f{\"u}r Music and attended courses on electronic data processing at the University of Cologne.
-At the same time he started to work at the Studio for Electronic Music of the West German Radio (WDR), first as assistant for other composers and later as as a permanent employee and composer (\cite{koenig_grove}).
+At the same time he started to work at the studios for electronic music in Cologne, the Nordwest Deutscher Radio (NWDR), first as assistant for other composers and later as a permanent employee and composer (\cite{koenig_grove}).
 
-Darmstadt of post Wold War II became an important center for modern music.
-The city is located in the state of Hessen in central Germany, in the American zone of occupation of these days.
+Darmstadt of post Wold War II became an important center for modern music thereby an attractive place for young composers.
+The city is located in the state of Hessen in central Germany, in the American zone of occupation of those days.
 The summer courses were financial supported by the US military government with two goals:
 first, to propagate American values in effort to reeducate the German population in preparation for the establishment of democratic institutions;
 and second, to provide a meeting place where musicians from the former fascist or fascist-occupied areas might further their musical reeducation through exposure to styles and techniques that had been prohibited during the fascist years (\cite{darmstadt_oxford}).
 Since the first Darmstadt summer course, in 1948, the focus was on current musical concepts;
-at the time it was, especially electronic and serail music\footnote{Internationales Musicinstitut Darmstadt: www.internationales-musikinstitut.de/en/summer-course/history/210-history.html}.
+at the time it was, mainly, electronic and serail music\footnote{Internationales Musicinstitut Darmstadt: www.internationales-musikinstitut.de/en/summer-course/history/210-history.html}.
 
-In addition to Darmstadt summer courses, the electronic music studios of Colone were another prominent center for the Darmstadt-Cologne avant guard scene.
+In addition to Darmstadt summer courses, the electronic music studios of Cologne were another prominent center for the Darmstadt-Cologne avant guard scene.
 The studios were founded in 1951, focused on the creation of pure electronic or ``electroacoustic'' music.
-It is believed that the term ``electroacoustic'' was coined by Meyer-Eppler, one of the founders of the studios, to distinguish themeselves from musique-concr{\`e}te that characterize the French electronic studios (\cite{nwdr}).
+It is believed that the term ``electroacoustic'' was coined by Meyer-Eppler, one of the founders of the studios, to distinguish themselves from musique-concr{\`e}te:
+a technique that characterized the already established style of Parisian electronic music (\cite{nwdr}).
 
 \section{Research Targets}  % Not sure that this is necessary
 \label{sec:research_targets}
