Final paragraph in history review about the composers exposure to ideas and later style

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -60,6 +60,12 @@ The studios were founded in 1951, focused on the creation of pure electronic or 
 It is believed that the term ``electroacoustic'' was coined by Meyer-Eppler, one of the founders of the studios, to distinguish themselves from musique-concr{\`e}te:
 a technique that characterized the already established style of Parisian electronic music (\cite{nwdr}).
 
+The three composers that the current work is about --- Ligeti, Stockhausen and Koenig --- found themselves, each one in its own way, taking part in the Darmstadt-Cologne scene during the 1950\textsuperscript{s}.
+Moreover, they all were in a similar stage of their career when they exposed to the ideas presented in the summer courses and the techniques used in the electronic music studios.
+These ideas deeply influenced their styles as composers (TODO cite).
+However, whereas Stockhausen and Koenig music is a direct continuation of these ideas, Ligeti music cannot be perceived as part of Darmstadt-Cologne style (TODO cite);
+his main repertoire is acoustic, and his works are usually not categorized as serial music.
+
 \section{Research Targets}  % Not sure that this is necessary
 \label{sec:research_targets}
 
