--- a/manuscript.tex
+++ b/manuscript.tex
@@ -5,7 +5,7 @@
 
 \addbibresource{bibliography.bib}
 
-\title{Logeti, Stockhausen and Koenig:\\Esthetics of Electronic Music}
+\title{Ligeti, Stockhausen and Koenig:\\Aesthetics of Electronic Music}
 \author{Tom Gurion}
 
 \begin{document}
@@ -69,8 +69,8 @@ his main repertoire is acoustic, and his works are usually not categorized as se
 \section{Research Targets}  % Not sure that this is necessary
 \label{sec:research_targets}
 
-\section{Esthetic Ideals in Electronic Music}
-\label{sec:esthetic_ideals_in_Electronic_music}
+\section{Aesthetic Ideals in Electronic Music}
+\label{sec:aesthetic_ideals_in_electronic_music}
 
 \subsection{Ligeti}
 \label{sub:eshtetic_ligeti}
