Ligeti concepts short intro

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -112,7 +112,9 @@ A unified understanding of the different ideas by the different composers will b
 
 TODO Add Frigyesi comments from her paper in the relevant places.
 
-TODO Some introduction: Ligeti citations are self explanatory...
+The following is a curated list musical concepts that I have collected from Ligeti's interview.
+The description of each concept is quoted directly from the interview.
+I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory, by Ligeti's words.
 
 \subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
 \label{subs:ligeti:hectic}
