English improvements in aesthetics section (intro + ligeti intro)

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -94,15 +94,15 @@ his main repertoire is acoustic, and his works are usually not categorized as se
 \section{Aesthetic Ideals in Electronic Music}
 \label{sec:aesthetic_ideals_in_electronic_music}
 
-In this section I analyze musical concepts as described in \textbf{written materials} of the three composers.
+In this section I analyze musical concepts as described in \textbf{written materials} by the three composers.
 For each composer I analyze one written source:
 for Ligeti, I analyze ``Ligeti in conversation'' --- an interview that was conducted by Peter Varnai in 1983 (\cite{varnai});
 for Stockhausen, I analyze his 1962 paper ``The concept of unity in electronic music'' (\cite{stockhausen});
 and for Koenig, I analyze his 1963 paper ``The Construction of Sound'' (\cite{koenig}).
 
 This work deals with aesthetics of electronic music, hence the decision to choose these papers by Stockhausen and Koenig is trivial.
-On the other hand, for Ligeti I choose a source with broader perspective, as he cannot be described as an electronic composer.
-Varnai's interview of Ligeti presents a comprehensive set of ideas behind Ligeti's composition style, and I found it useful as a basis to comparisons of musical concepts.
+On the other hand, for Ligeti I choose a source with broader perspective, as his music is usually not categorized as electronic.
+Varnai's interview of Ligeti presents a comprehensive set of ideas behind Ligeti's composition style, and I found it useful as a basis to compare the musical concepts with.
 
 Later in this section I will compare these ideas, and search for similarities and differences between them.
 A unified understanding of the different ideas by the different composers will be used to analyze their music in the next section.
@@ -114,7 +114,7 @@ TODO Add Frigyesi comments from her paper in the relevant places.
 
 The following is a curated list musical concepts that I have collected from Ligeti's interview.
 The description of each concept is quoted directly from the interview.
-I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory, by Ligeti's words.
+I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory, in Ligeti's words.
 
 \subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
 \label{subs:ligeti:hectic}
