Add Frigyesi comments around Ligeti's concepts

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -110,8 +110,6 @@ A unified understanding of the different ideas by the different composers will b
 \subsection{Ligeti}
 \label{sub:eshtetic_ligeti}
 
-TODO Add Frigyesi comments from her paper in the relevant places.
-
 The following is a curated list musical concepts that I have collected from Ligeti's interview.
 The description of each concept is quoted directly from the interview.
 I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory, in Ligeti's words.
@@ -129,6 +127,9 @@ I add additional clarification only when absolutely necessary, as I think that t
   If pathos in a gesture is excessive you can no longer perceive or register it (p. 19).
 \end{MyShadequote}
 
+Indeed, researchers often describe Ligeti's music as pale and nervous dream-like (or even nightmarish) reflection of life.
+``Grand emotions are captured in a manner that they do not sound real or believable'' argues Frigyesi, ``gestures exaggerate to the point that it becomes surreal, frightening, absurd, or even comical'' (TODO Frigeyesi).
+
 \subsubsection{Machine like music / Meccanico-type}
 \label{subs:ligeti:machine}
 
@@ -136,6 +137,8 @@ I add additional clarification only when absolutely necessary, as I think that t
   I have always been fascinated by machines that do not work properly...
   Transposed into music, the ticking of malfunctioning machinery occurs in many of my works (p. 16).
 \end{MyShadequote}
+
+In addition, researchers pointed out that Ligeti's machines always brake down in his music, what makes them only more frightening (TODO cite).
 
 \subsubsection{Micropolyphony}
 \label{subs:ligeti:micropolyphony}
@@ -170,7 +173,7 @@ I add additional clarification only when absolutely necessary, as I think that t
 \label{subs:ligeti:overwriting}
 
 \begin{MyShadequote}
-  My reason for so ‘overwriting’ the score was to achieve the effect I wanted, a sense of danger (p.53).
+  My reason for so `overwriting' the score was to achieve the effect I wanted, a sense of danger (p.53).
 \end{MyShadequote}
 
 \begin{MyShadequote}
