Some fixes to Ligeti ideas

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -111,8 +111,9 @@ A unified understanding of the different ideas by the different composers will b
 \label{sub:eshtetic_ligeti}
 
 The following is a curated list musical concepts that I have collected from Ligeti's interview.
+Ligeti was not list his concepts explicitly, hence the categorization is done by me and is also subjective.
 The description of each concept is quoted directly from the interview.
-I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory, in Ligeti's words.
+I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory.
 
 \subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
 \label{subs:ligeti:hectic}
@@ -191,6 +192,8 @@ In addition, researchers pointed out that Ligeti's machines always brake down in
   ...The passages written in small notes simply indicates that the player should execute them as fast as he can.
   That is why I said that the instrumentalist were not given much freedom; what I kept under control was the overall sound texture at any one time (p. 63).
 \end{MyShadequote}
+
+See also the 2\textsuperscript{nd} quote from last subsection (Flexible rhythm -- \ref{subs:ligeti:flexible}).
 
 \subsubsection{``Mistiness'' to ``clearing-up'' process}
 \label{subs:ligeti:mistiness}
